[package]
name = "cyberengine"
version = "0.1.0"
authors = ["Aatu Hieta <aatu@hieta.fi>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
genmesh = "*"
gfx = "0.16"
gfx_core = "*"
gfx_window_glutin = "0.18"
gfx_device_gl = "0.14"
glutin = "0.10.0"
imgui = { git = "https://github.com/Gekkio/imgui-rs" }
imgui-gfx-renderer = { git = "https://github.com/Gekkio/imgui-rs" }
image = "*"