[package]
name = "cyberengine"
version = "0.1.0"
authors = ["Aatu Hieta <aatu@hieta.fi>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
genmesh = "*"
gfx_core = "0.7.1"
gfx = "0.16"
gfx_macros = "0.2"
gfx_device_gl = "0.14"
gfx_window_glutin = "0.18"
glutin = "0.10"
imgui = { git = "https://github.com/Gekkio/imgui-rs" }
imgui-gfx-renderer = { git = "https://github.com/Gekkio/imgui-rs" }
image = "*"
